[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-util = {version = "0.7.10", features = ["full"]}
tokio = {version = "1", features = ["full"]}
serde = { version="1.0.197", features=["derive"]}
bincode = "1.3.3"
futures = "0.3.30"
bytes = "1.5.0"
